Added classes for Solr Support, added template of restServer methods, corrected pom.xml in restServer and solrConnector

--- a/server/restServer/pom.xml
+++ b/server/restServer/pom.xml
@@ -28,6 +28,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
         </dependency>
+        <dependency>
+            <groupId>pl.edu.amu.lasuch</groupId>
+            <artifactId>common</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
 
     </dependencies>
 </project>
