--- a/server/pom.xml
+++ b/server/pom.xml
@@ -92,6 +92,11 @@
             <version>${org.apache.commons}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.4</version>
+        </dependency>
     </dependencies>
 	
 	<build>
